Fixed sprava/hry.twig template so that buttons are stretched to fit whole row

--- a/www/css/sprava_hry.css
+++ b/www/css/sprava_hry.css
@@ -12,10 +12,15 @@
 	width: 100%; height: 100%;
 }
 
-.game .btn-group{
+.game .pull-down{
 	position: absolute;
+	width:100%;
 	padding-right:12px;
 	bottom: 12px;
+}
+
+.game .btn.form-control{
+	width: 100%;
 }
 
 .grp-edit .list-group-item{
